# sciq-generator

./: .gitignore  README.md  classifier.py  device.py  generate_question.py  main.py  model.py  pyproject.toml  train_classifier.py  train_generator.py  utils.py
src/: benchmark_generator.py  classifier.py  estimate_question.py  generate_question.py  model.py  train_classifier.py  train_generator.py  training_data.py  utils.py
